# CUDA-PointPillars

./: CMakeLists.txt  check_bin.py  new_environment.yaml
model/: pointpillar.onnx
src/common/: tensorrt.cpp
tool/: build_trt_engine.sh  environment.sh  evaluate_kitti_val.sh  export_onnx.py  filtering.py  modify_onnx.py
tool/eval/: eval.py  evaluate.py  kitti_format.py  val_occ0.txt
tool/fusion/: frustum_fallback.py  io_utils.py  matcher.py  pipeline.py  score_fusion.py  visualize.py  yolo_wrapper.py
